--- a/appSOAP/changePowerUnit.html
+++ b/appSOAP/changePowerUnit.html
@@ -49,7 +49,9 @@
     <button class="btn waves-effect waves-light grey lighten-1" type="reset" >Limpar
     </button>
 </form>
-
+<footer>
+    <h5 class="center">Arthur C. & Tadashi O.</h5>
+</footer>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="js/jQuery.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
